# ontologx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  env.default  pyproject.toml
docker/: common.yaml  compose.bedrock.yaml  compose.ollama.yaml  compose.openai.yaml  compose.vllm.yaml  compose.yaml  compose.yml  neo4j-start.sh  neo4j.dockerfile  ollama.dockerfile  ontologx.dockerfile  test.compose.yaml  vllm.dockerfile  vllm_neuron.dockerfile
lkgb/: __main__.py  backend.py  config.py
lkgb/parser/: models.py  parser.py
lkgb/store/: dataset.py  driver.py  ontology.py
notebooks/: baseline_tests.ipynb  correct_metrics.ipynb  correct_shacl.ipynb  dataset_load.ipynb  graph_viz.ipynb  predict_tactics.ipynb  random_draw_test_logs.ipynb  tactics_results.csv  test.ipynb
ontologx/: __init__.py  __main__.py  accuracy.py  backend.py  config.py  run_handler.py
ontologx/backend/: __init__.py  embeddings.py  llm.py  tests.py
ontologx/metrics/: __init__.py  llm_metrics.py  metrics.py  ontology_metrics.py  shacl_metrics.py
ontologx/parser/: __init__.py  baseline_parser.py  main_parser.py  models.py  parser.py  parser_factory.py  reports.py  tools.py  tools_parser.py
ontologx/store/: __init__.py  dataset.py  driver.py  module.py  ontology.py  schema.py  store.py
ontologx/store/neo4j/: __init__.py  dataset.py  neo4j_store.py  ontology.py  schema.py  utils.py
resources/: predict_tactics.ipynb
resources/data/: ait.csv  test.csv  test.lc.ttl  test.ttl  train.ttl  validation.lc.ttl  validation.ttl
resources/data/ait/: test.ttl  train.csv  train.ttl  validation.csv  validation.ttl
resources/data/polito/: test.csv  test.ttl  train.csv  train.ttl  validation.csv  validation.ttl
resources/data/train/: graph-1.ttl  graph-10.ttl  graph-2.ttl  graph-3.ttl  graph-4.ttl  graph-5.ttl  graph-6.ttl  graph-7.ttl  graph-8.ttl  graph-9.ttl  index.csv
resources/graphdb/: repo.ttl
resources/ontologies/: dataset.ttl  experiments.ttl  logs.ttl  logs_shacl.ttl  mlsx.ttl  ontologx.ttl
resources/prompts/: baseline.system.md  build_graph.system.md  main.system.md  tactics.system.md  tactics_baseline.system.md
src/ontologx/: __init__.py  __main__.py  config.py  run_handler.py  settings.py
src/ontologx/agents/: graph_connector.py  kb_builder.py
src/ontologx/agents/graph_builder/: agent.py  models.py
src/ontologx/agents/tactics_predictor/: agent.py  models.py
src/ontologx/backend/: __init__.py  embeddings.py  llm.py
src/ontologx/graph_builder/: agent.py  models.py  utils.py
src/ontologx/mcp/: __init__.py  server.py
src/ontologx/metrics/: __init__.py  llm_metrics.py  metrics.py  ontology_metrics.py  shacl_metrics.py  ttp_metrics.py
src/ontologx/parser/: baseline_parser.py  main_parser.py  models.py  parser.py  parser_factory.py
src/ontologx/store/: __init__.py  config.py  models.py  store.py
src/ontologx/store/neo4j/: dataset.py  neo4j_store.py  ontology.py  schema.py  utils.py
src/ontologx/stores/: __init__.py  graph_store.py  vector_store.py
