[project]
name = "ontologx"
version = "0.1.0"
description = ""
authors = [{ name = "Luca Cotti", email = "luca.cotti@unibs.it" }]
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "python-dotenv>=1.0.1",
    "neo4j>=5.28.1",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-neo4j (>=0.5.0,<0.6.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "deepeval (>=3.3.0,<4.0.0)",
    "pyshacl (>=0.30.1,<0.31.0)",
    "rich (>=14.1.0,<15.0.0)",
]

[project.scripts]
olx = "ontologx.__main__:main"

[dependency-groups]
dev = ["ruff>=0.12.4,<0.13", "pre-commit>=4.1.0,<5"]
openai = ["langchain-openai>=0.3.30,<0.4"]
huggingface = [
    "torch>=2.6.0,<3",
    "langchain-huggingface>=0.1.2,<0.2",
    "sentence-transformers>=3.4.1,<4",
    "accelerate>=1.4.0,<2",
    "einops>=0.8.1,<0.9",
]
ollama = ["langchain-ollama>=0.2.3,<0.3"]
aws = ["langchain-aws>=0.2.22,<0.3"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D107",    # Missing docstring in __init__
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "ANN204",  # Missing return type for special method `__init__`
    "TC002",   # Move into type-checking block
    "D203",    # Incorrect blank line before class
    "D213",    # Multi line summary second line
    "PLC0415", # Imports at top level
]
