[project]
name = "ontologx"
version = "0.1.0"
description = ""
authors = [{ name = "Luca Cotti", email = "luca.cotti@unibs.it" }]
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "rdflib (>=7.1.4,<8.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "langgraph>=1.0.1",
    "mitreattack-python>=5.3.0",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings>=2.12.0",
    "polars>=1.36.1",
    "langchain-aws>=0.2.35",
    "langchain-weaviate>=0.0.6",
    "fastmcp>=2.14.1",
]

[project.scripts]
olx = "ontologx.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.12.4,<0.13",
    "pre-commit>=4.1.0,<5",
]
bedrock = ["langchain-aws>=0.2.22,<0.3"]
openai = ["langchain-openai>=0.3.30,<0.4"]
notebooks = ["thefuzz>=0.22.1", "ipykernel>=7.1.0"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D107",    # Missing docstring in __init__
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "ANN204",  # Missing return type for special method `__init__`
    "TC002",   # Move into type-checking block
    "D203",    # Incorrect blank line before class
    "D213",    # Multi line summary second line
    "D104",    # Missing docstring in public package
    "PLC0415", # Imports at top level
]
[tool.ruff.lint.per-file-ignores]
"notebooks/**.ipynb" = [
    "T201"
]
